    erDiagram

    TipoDocumento {
        int IDTipoDocumento PK
        string tipo
        string descripcion
    }

    Tarjeta {
        int numeroTarjeta PK
        int CVV
        string nombreTitular
        string apellidoTitular
        string telefono
        datetime fechaExpiracion
    }

    Pasajero {
        int numeroDocumento PK
        int IDTipoDocumento FK
        string nombre
        string apellido
        int telefono
        string correoElectronico
    }
    
    Ciudad {
        int IDCiudad PK
        string nombre
        string descripcion
    }

    Aeronave {
        string numeroAeronave PK
        string modelo
    }

    Puerta {
        int IDPuerta PK
        string ubicacion
        string descripcion
    }

    ServicioComida {
        int IDServicioComida PK
        string nombre
        string descripcion
    }

    EstadoAsiento {
        int IDEstadoAsiento PK
        string nombre
        string descripcion
    }

    TipoAsiento {
        int IDTipoAsiento PK
        string descripcion
        float precio
    }

    Asiento {
        int IDAsiento PK
        string ubicacion
        int IDEstadoAsiento FK
        int IDTipoAsiento FK
    }

    Vuelo {
        string numeroVuelo PK
        string nombreCompania 
        int ciudadSalida FK
        int ciudadLlegada FK
        datetime fechaHoraSalida
        datetime fechaHoraLlegada
        int numeroAeronave FK
        float distancia 
        int IDServicioComida FK
        int IDPuerta FK
    }

    Reserva {
        string codigoReserva PK
        string numeroVuelo FK
        int IDPasajero FK
        int IDAsiento FK
        datetime fechaHoraReserva
        float numeroTarjeta    
    }


    Pasajero ||--|{ Vuelo: Tiene
    Aeronave ||--|{ Vuelo: Tiene
    Ciudad ||--|{ Vuelo: Tiene
    ServicioComida ||--|{ Vuelo: Tiene
    Puerta ||--|{ Vuelo: Tiene
    Vuelo ||--|{ Reserva: Tiene
    Vuelo ||--|{ TipoAsiento: Tiene
    Pasajero }|--|| TipoDocumento: Tiene
    Pasajero ||--|{ Tarjeta: Tiene
    Pasajero }|--|| Reserva: Tiene
    TipoAsiento ||--|{ Asiento: Tiene
    EstadoAsiento ||--|{ Asiento: Tiene